--- a/src/components/sections/BandHero.css
+++ b/src/components/sections/BandHero.css
@@ -12,7 +12,7 @@
 .herotitle {
   text-align: center;
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
@@ -29,6 +29,7 @@
   transform: translate(-50%, -50%);
   color: white;
   background-color: transparent;
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: 900;
+  font-family: "Shadows Into Light", cursive;
 }
