--- a/src/components/sections/ListMusic.css
+++ b/src/components/sections/ListMusic.css
@@ -1,15 +1,13 @@
-.track {
-  padding: 5px;
-  font-size: 1rem;
-  padding-right: 5px;
+.listmusic {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: auto;
 }
 
-.song {
-  padding: 5px;
-  margin-left: 50px;
-  margin-right: 50px;
-}
-.time {
-  padding: 5px;
-  padding-right: 5px;
+.list {
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
 }
